Clients delete action
