# API/Application/API.Application/Mappings/ClientProfile.cs
@@ -1,4 +1,4 @@
-﻿using API.Application.Client.Commands;
+﻿using API.Application.Client.Commands.Create;
 using API.Application.DTO;
 using AutoMapper;
 using System;
