# API/Contract/API.Contract/IClientRepository.cs
@@ -7,6 +7,8 @@ namespace API.Contract
 {
     public interface IClientRepository
     {
+        Task<Domain.Models.Client> GetById(Guid id, CancellationToken cancellationToken);
         Task<Guid> AddAsync(Client client, CancellationToken cancellationToken);
+        Task DeleteAsync(Client client, CancellationToken cancellationToken);
     }
 }
