# frontend/swagger.json
@@ -34,6 +34,28 @@
             }
           }
         }
+      },
+      "delete": {
+        "tags": [
+          "Client"
+        ],
+        "operationId": "Delete",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "format": "uuid"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success"
+          }
+        }
       }
     },
     "/Client": {
